; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_stv0900_core.c_stv0900_read_ucblocks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_stv0900_core.c_stv0900_read_ucblocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.stv0900_state* }
%struct.stv0900_state = type { i32, %struct.stv0900_internal* }
%struct.stv0900_internal = type { i32 }

@STV0900_DVBS2_STANDARD = common dso_local global i64 0, align 8
@BBFCRCKO1 = common dso_local global i32 0, align 4
@BBFCRCKO0 = common dso_local global i32 0, align 4
@UPCRCKO1 = common dso_local global i32 0, align 4
@UPCRCKO0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @stv0900_read_ucblocks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stv0900_read_ucblocks(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.stv0900_state*, align 8
  %6 = alloca %struct.stv0900_internal*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %11 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %12 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %11, i32 0, i32 0
  %13 = load %struct.stv0900_state*, %struct.stv0900_state** %12, align 8
  store %struct.stv0900_state* %13, %struct.stv0900_state** %5, align 8
  %14 = load %struct.stv0900_state*, %struct.stv0900_state** %5, align 8
  %15 = getelementptr inbounds %struct.stv0900_state, %struct.stv0900_state* %14, i32 0, i32 1
  %16 = load %struct.stv0900_internal*, %struct.stv0900_internal** %15, align 8
  store %struct.stv0900_internal* %16, %struct.stv0900_internal** %6, align 8
  %17 = load %struct.stv0900_state*, %struct.stv0900_state** %5, align 8
  %18 = getelementptr inbounds %struct.stv0900_state, %struct.stv0900_state* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  store i32 %19, i32* %7, align 4
  store i32 0, i32* %10, align 4
  %20 = load i32*, i32** %4, align 8
  store i32 0, i32* %20, align 4
  %21 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i64 @stv0900_get_standard(%struct.dvb_frontend* %21, i32 %22)
  %24 = load i64, i64* @STV0900_DVBS2_STANDARD, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %52

26:                                               ; preds = %2
  %27 = load %struct.stv0900_internal*, %struct.stv0900_internal** %6, align 8
  %28 = load i32, i32* @BBFCRCKO1, align 4
  %29 = call i32 @stv0900_read_reg(%struct.stv0900_internal* %27, i32 %28)
  store i32 %29, i32* %8, align 4
  %30 = load %struct.stv0900_internal*, %struct.stv0900_internal** %6, align 8
  %31 = load i32, i32* @BBFCRCKO0, align 4
  %32 = call i32 @stv0900_read_reg(%struct.stv0900_internal* %30, i32 %31)
  store i32 %32, i32* %9, align 4
  %33 = load i32, i32* %8, align 4
  %34 = shl i32 %33, 8
  %35 = load i32, i32* %9, align 4
  %36 = or i32 %34, %35
  store i32 %36, i32* %10, align 4
  %37 = load %struct.stv0900_internal*, %struct.stv0900_internal** %6, align 8
  %38 = load i32, i32* @UPCRCKO1, align 4
  %39 = call i32 @stv0900_read_reg(%struct.stv0900_internal* %37, i32 %38)
  store i32 %39, i32* %8, align 4
  %40 = load %struct.stv0900_internal*, %struct.stv0900_internal** %6, align 8
  %41 = load i32, i32* @UPCRCKO0, align 4
  %42 = call i32 @stv0900_read_reg(%struct.stv0900_internal* %40, i32 %41)
  store i32 %42, i32* %9, align 4
  %43 = load i32, i32* %8, align 4
  %44 = shl i32 %43, 8
  %45 = load i32, i32* %9, align 4
  %46 = or i32 %44, %45
  %47 = load i32*, i32** %4, align 8
  store i32 %46, i32* %47, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load i32*, i32** %4, align 8
  %50 = load i32, i32* %49, align 4
  %51 = add nsw i32 %50, %48
  store i32 %51, i32* %49, align 4
  br label %52

52:                                               ; preds = %26, %2
  ret i32 0
}

declare dso_local i64 @stv0900_get_standard(%struct.dvb_frontend*, i32) #1

declare dso_local i32 @stv0900_read_reg(%struct.stv0900_internal*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
